# bazel-test

./: .gitmodules  README.md
src/: .gitignore
src/python/: WORKSPACE.bazel
src/python/app_1/: BUILD.bazel  app_1.py
src/python/app_2/: BUILD.bazel  app_2.py
src/python/lib_x/: BUILD.bazel  test_x_util.py  x_util.py
src/python/lib_y/: BUILD.bazel  more_fun.py  num_some.py  test_num_some.py
src/python/test/: BUILD.bazel  foo.py
src/python/test_spec/: BUILD.bazel
src/test/: bazel-testlogs
src/test/spec/: openapi.yaml
test/: BUILD.bazel  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-test  doit.sh  foo.py  test.py
