#genrule(
#    name = 'foo',
#    srcs = [ 'bar.py' ],
#    outs = [ 'mo/foo.py'],
#    cmd_bash = '$(location bin/doit.sh) $(location bar.py) $(RULEDIR)/mo',
#    tools = [
#        'bin/doit.sh'
#    ],
#)

genrule(
  name = 'openapi_server',
  srcs = [
      'spec/openapi.yaml',
  ],
  outs = [
    'codegen/moo.py'
 #   'codegen/openapi_server/models/document.py',
  ],
  cmd = '$(location bin/openapi-generate) $(RULEDIR)/codegen $(location spec/openapi.yaml)',
  tools = [
      'bin/openapi-generate',
      'bin/openapi-generator-cli-5.3.1.jar',
  ],
)

py_binary(
    name = 'test',
    srcs = [
        'codegen/moo.py',
        #'codegen/openaapi_server/models/document.py',
        'test.py',
        #'mo/foo.py',
    ],
    deps = [
    ]
)
