#genrule(
#    name = 'foo',
#    srcs = [ 'bar.py' ],
#    outs = [ 'mo/foo.py'],
#    cmd_bash = '$(location bin/doit.sh) $(location bar.py) $(RULEDIR)/mo',
#    tools = [
#        'bin/doit.sh'
#    ],
#)

genrule(
  name = 'openapi_server',
  srcs = [
      'spec/openapi.yaml',
  ],
  outs = [
    '__openapicodegen/moo.py',
    'openapi_server/models/document.py',
    'openapi_server/moo.py',
  ],
  cmd = '$(location bin/openapi-generate) $(RULEDIR) $(location spec/openapi.yaml) $(location bin/openapi-generator-cli-5.3.1.jar)',
  tools = [
      'bin/openapi-generate',
      'bin/openapi-generator-cli-5.3.1.jar',
  ],
)

py_binary(
    name = 'test',
    srcs = [
        'openapi_server/models/document.py',
        'test.py',
        #'mo/foo.py',
    ],
    deps = [
    ]
)
