genrule(
  name = 'openapi_server',
  srcs = [
      'spec/openapi.yaml',
  ],
  outs = [
    'openapi_server/typing_utils.py',
    'openapi_server/test/test_developers_controller.py',
    'openapi_server/test/test_default_controller.py',
    'openapi_server/util.py',
    'openapi_server/models/start_download_publications_payload.py',
    'openapi_server/models/metadata.py',
    'openapi_server/models/health.py',
    'openapi_server/models/option_item.py',
    'openapi_server/models/get_download_publications_response_completed.py',
    'openapi_server/models/documents_payload.py',
    'openapi_server/models/start_download_publications_response.py',
    'openapi_server/models/resource.py',
    'openapi_server/models/base_model_.py',
    'openapi_server/models/get_download_publications_response_in_progress.py',
    'openapi_server/models/document.py',
    'openapi_server/models/pagination.py',
    'openapi_server/models/documents_response.py',
    'openapi_server/models/filter_option.py',
    'openapi_server/encoder.py',
    'openapi_server/controllers/default_controller.py',
    'openapi_server/controllers/security_controller_.py',
    'openapi_server/controllers/developers_controller.py',
  ],
  cmd = '$(location bin/openapi-generate) $(RULEDIR) $(location spec/openapi.yaml) $(location bin/openapi-generator-cli-5.3.1.jar)',
  tools = [
      'bin/openapi-generate',
      'bin/openapi-generator-cli-5.3.1.jar',
  ],
)

py_library(
    name = 'test_lib',
    srcs = [
        'openapi_server/typing_utils.py',
        'openapi_server/test/test_developers_controller.py',
        'openapi_server/test/test_default_controller.py',
        'openapi_server/util.py',
        'openapi_server/models/start_download_publications_payload.py',
        'openapi_server/models/metadata.py',
        'openapi_server/models/health.py',
        'openapi_server/models/option_item.py',
        'openapi_server/models/get_download_publications_response_completed.py',
        'openapi_server/models/documents_payload.py',
        'openapi_server/models/start_download_publications_response.py',
        'openapi_server/models/resource.py',
        'openapi_server/models/base_model_.py',
        'openapi_server/models/get_download_publications_response_in_progress.py',
        'openapi_server/models/document.py',
        'openapi_server/models/pagination.py',
        'openapi_server/models/documents_response.py',
        'openapi_server/models/filter_option.py',
        'openapi_server/encoder.py',
        'openapi_server/controllers/default_controller.py',
        'openapi_server/controllers/security_controller_.py',
        'openapi_server/controllers/developers_controller.py',
        'foo.py',
    ],
    deps = [
    ]
)

py_test(
    name = 'test_foo',
    srcs = [
        'test_foo.py',
    ],
    deps = [ ':test_lib' ],
)

py_binary(
    name = 'test',
    srcs = [
        'test.py',
    ],
    deps = [
        ':test_lib',
    ]
)
