py_library(
    name = 'test_lib',
    srcs = [
        'foo.py',
    ],
    deps = [
        '//test_spec',
    ]
)

py_test(
    name = 'test_foo',
    srcs = [
        'test_foo.py',
    ],
    deps = [ ':test_lib' ],
)

py_binary(
    name = 'test',
    srcs = [
        'test.py',
    ],
    deps = [
        ':test_lib',
    ]
)
