genrule(
  name = 'openapi_server',
  srcs = [
      'spec/openapi.yaml',
  ],
  outs = [
    'typing_utils.py',
    'test/test_developers_controller.py',
    'test/test_default_controller.py',
    'util.py',
    'models/start_download_publications_payload.py',
    'models/metadata.py',
    'models/health.py',
    'models/option_item.py',
    'models/get_download_publications_response_completed.py',
    'models/documents_payload.py',
    'models/start_download_publications_response.py',
    'models/resource.py',
    'models/base_model_.py',
    'models/get_download_publications_response_in_progress.py',
    'models/document.py',
    'models/pagination.py',
    'models/documents_response.py',
    'models/filter_option.py',
    'encoder.py',
    'controllers/default_controller.py',
    'controllers/security_controller_.py',
    'controllers/developers_controller.py',
  ],
  cmd = '$(location bin/openapi-generate) $(RULEDIR) $(location spec/openapi.yaml) $(location bin/openapi-generator-cli-5.3.1.jar) test_spec',
  tools = [
      'bin/openapi-generate',
      'bin/openapi-generator-cli-5.3.1.jar',
  ],
)

py_library(
    name = 'test_spec',
    srcs = [
        'typing_utils.py',
        'test/test_developers_controller.py',
        'test/test_default_controller.py',
        'util.py',
        'models/start_download_publications_payload.py',
        'models/metadata.py',
        'models/health.py',
        'models/option_item.py',
        'models/get_download_publications_response_completed.py',
        'models/documents_payload.py',
        'models/start_download_publications_response.py',
        'models/resource.py',
        'models/base_model_.py',
        'models/get_download_publications_response_in_progress.py',
        'models/document.py',
        'models/pagination.py',
        'models/documents_response.py',
        'models/filter_option.py',
        'encoder.py',
        'controllers/default_controller.py',
        'controllers/security_controller_.py',
        'controllers/developers_controller.py',
    ],
    deps = [
    ],
    visibility = ["//visibility:public"],
)
